- fabric:    - remove client: now the mod has to rely on the server to work, and get rid of the dependency on the client altogether;    - Security policies for client connection management, such as whitelists, have been added; - ide-debug-tool: optimize prefix of output; - idea-plugin: update embedded `ide-debug-tool-1.1.8.jar`;